# multitier-psi

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  streamlit_app.py
data/: canonical_supplier_dict.json  oem_a_graph.json  oem_b_graph.json
decisions/: DEC-PSI-001-protocol-choice.md
docs/: first-pr.md  security-disclosure.md
docs/dev/: protocol-walkthrough.md
eval/: determinism.py  leakage_bound.py
examples/: psi-session-baseline.jsonl
mtpsi/: __init__.py  cli.py  protocol.py
schemas/: psi_session.schema.json  supplier_graph.schema.json
scripts/: validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/mtpsi/: __init__.py  cli.py  party.py  protocol.py
tests/: test_protocol.py
